--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -9,11 +9,9 @@
     tools:showIn="@layout/activity_scrolling">
 
     <TextView
-        android:id="@+id/content_scrolling"
+        android:id="@+id/content_scrolling_tv_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:autoLink="web"
-        android:text="@string/large_text" />
+        android:layout_margin="@dimen/text_margin" />
 
 </android.support.v4.widget.NestedScrollView>
